--- a/index.html
+++ b/index.html
@@ -581,6 +581,7 @@
     <link rel="stylesheet" href="css/calendar.sunny-beach.css">
     <link rel="stylesheet" href="css/calendar.sunrise-over-the-ocean.css">
     <link rel="stylesheet" href="css/calendar.sunset-magic.css">
+    <link rel="stylesheet" href="css/calendar.sunset-point.css">
     <link rel="stylesheet" href="css/calendar.supreme-level.css">
     <link rel="stylesheet" href="css/calendar.surfing-club.css">
     <link rel="stylesheet" href="css/calendar.sweet-misty-morning.css">
@@ -1479,6 +1480,7 @@
                 <option value="sunny-beach">Sunny Beach</option>
                 <option value="sunrise-over-the-ocean">Sunrise over the Ocean</option>
                 <option value="sunset-magic">Sunset Magic</option>
+                <option value="sunset-point">Sunset Point</option>
                 <option value="supreme-level">Supreme Level</option>
                 <option value="surfing-club">Surfing Club</option>
                 <option value="sweet-misty-morning">Sweet Misty Morning</option>
