--- a/index.html
+++ b/index.html
@@ -447,6 +447,7 @@
     <link rel="stylesheet" href="css/calendar.ocean-vortex.css">
     <link rel="stylesheet" href="css/calendar.okinawa-breeze.css">
     <link rel="stylesheet" href="css/calendar.old-lighthouse.css">
+    <link rel="stylesheet" href="css/calendar.olimpia-milano.css">
     <link rel="stylesheet" href="css/calendar.one-dream.css">
     <link rel="stylesheet" href="css/calendar.one-step-ahead.css">
     <link rel="stylesheet" href="css/calendar.one-step-at-a-time.css">
@@ -1346,6 +1347,7 @@
                 <option value="ocean-vortex">Ocean Vortex</option>
                 <option value="okinawa-breeze">Okinawa Breeze</option>
                 <option value="old-lighthouse">Old Lighthouse</option>
+                <option value="olimpia-milano">Olimpia Milano</option>
                 <option value="one-dream">One Dream</option>
                 <option value="one-step-ahead">One Step Ahead</option>
                 <option value="one-step-at-a-time">One Step at a Time</option>
