--- a/index.html
+++ b/index.html
@@ -500,6 +500,7 @@
     <link rel="stylesheet" href="css/calendar.rainforest-jungle.css">
     <link rel="stylesheet" href="css/calendar.rain-waltz.css">
     <link rel="stylesheet" href="css/calendar.random-coincidence.css">
+    <link rel="stylesheet" href="css/calendar.real-madrid.css">
     <link rel="stylesheet" href="css/calendar.real-results.css">
     <link rel="stylesheet" href="css/calendar.red-desert.css">
     <link rel="stylesheet" href="css/calendar.red-lake.css">
@@ -1400,6 +1401,7 @@
                 <option value="rainforest-jungle">Rainforest Jungle</option>
                 <option value="rain-waltz">Rain Waltz</option>
                 <option value="random-coincidence">Random Coincidence</option>
+                <option value="real-madrid">Real Madrid</option>
                 <option value="real-results">Real Results</option>
                 <option value="red-desert">Red Desert</option>
                 <option value="red-lake">Red Lake</option>
