--- a/index.html
+++ b/index.html
@@ -381,6 +381,7 @@
     <link rel="stylesheet" href="css/calendar.magnificent-symbol.css">
     <link rel="stylesheet" href="css/calendar.main-stream.css">
     <link rel="stylesheet" href="css/calendar.mammoth-tusk.css">
+    <link rel="stylesheet" href="css/calendar.manchester-united.css">
     <link rel="stylesheet" href="css/calendar.maple-leaf-fall.css">
     <link rel="stylesheet" href="css/calendar.maple-syrup.css">
     <link rel="stylesheet" href="css/calendar.medieval-knights.css">
@@ -1283,6 +1284,7 @@
                 <option value="magic-fly">Magic Fly</option>
                 <option value="magnificent-symbol">Magnificent Symbol</option>
                 <option value="mammoth-tusk">Mammoth Tusk</option>
+                <option value="manchester-united">Manchester United</option>
                 <option value="maple-leaf-fall">Maple Leaf Fall</option>
                 <option value="maple-syrup">Maple Syrup</option>
                 <option value="medieval-knights">Medieval Knights</option>
