--- a/index.html
+++ b/index.html
@@ -381,6 +381,7 @@
     <link rel="stylesheet" href="css/calendar.magnificent-symbol.css">
     <link rel="stylesheet" href="css/calendar.main-stream.css">
     <link rel="stylesheet" href="css/calendar.mammoth-tusk.css">
+    <link rel="stylesheet" href="css/calendar.manchester-city.css">
     <link rel="stylesheet" href="css/calendar.manchester-united.css">
     <link rel="stylesheet" href="css/calendar.maple-leaf-fall.css">
     <link rel="stylesheet" href="css/calendar.maple-syrup.css">
@@ -623,6 +624,7 @@
     <link rel="stylesheet" href="css/calendar.the-last-day-of-spring.css">
     <link rel="stylesheet" href="css/calendar.the-last-mohican.css">
     <link rel="stylesheet" href="css/calendar.the-last-paradise.css">
+    <link rel="stylesheet" href="css/calendar.manchester-city.css">
     <link rel="stylesheet" href="css/calendar.the-modern-developer.css">
     <link rel="stylesheet" href="css/calendar.the-perfect-blend.css">
     <link rel="stylesheet" href="css/calendar.the-prince-of-monaco.css">
@@ -1284,6 +1286,7 @@
                 <option value="magic-fly">Magic Fly</option>
                 <option value="magnificent-symbol">Magnificent Symbol</option>
                 <option value="mammoth-tusk">Mammoth Tusk</option>
+                <option value="manchester-city">Manchester City</option>
                 <option value="manchester-united">Manchester United</option>
                 <option value="maple-leaf-fall">Maple Leaf Fall</option>
                 <option value="maple-syrup">Maple Syrup</option>
