Santa Barbara CA v001

--- a/index.html
+++ b/index.html
@@ -520,6 +520,7 @@
     <link rel="stylesheet" href="css/calendar.saint-tropez-moon.css">
     <link rel="stylesheet" href="css/calendar.san-francisco-lights.css">
     <link rel="stylesheet" href="css/calendar.san-francisco-sunrise.css">
+    <link rel="stylesheet" href="css/calendar.santa-barbara.css">
     <link rel="stylesheet" href="css/calendar.science-fiction.css">
     <link rel="stylesheet" href="css/calendar.sea-breeze.css">
     <link rel="stylesheet" href="css/calendar.seabreeze-avenue.css">
@@ -1424,6 +1425,7 @@
                 <option value="saint-tropez-moon">Saint Tropez Moon</option>
                 <option value="san-francisco-lights">San Francisco Lights</option>
                 <option value="san-francisco-sunrise">San Francisco Sunrise</option>
+                <option value="santa-barbara">Santa Barbara CA</option>
                 <option value="science-fiction">Science Fiction</option>
                 <option value="sea-breeze">Sea Breeze</option>
                 <option value="seabreeze-avenue">Seabreeze Avenue</option>
