--- a/index.html
+++ b/index.html
@@ -275,8 +275,8 @@
     <link rel="stylesheet" href="css/calendar.giant-petrel.css">
     <link rel="stylesheet" href="css/calendar.global-impact.css">
     <link rel="stylesheet" href="css/calendar.glorious-day.css">
+    <link rel="stylesheet" href="css/calendar.gold-coast.css">
     <link rel="stylesheet" href="css/calendar.golden-century.css">
-    <link rel="stylesheet" href="css/calendar.golden-coast.css">
     <link rel="stylesheet" href="css/calendar.golden-eagle.css">
     <link rel="stylesheet" href="css/calendar.golden-gate.css">
     <link rel="stylesheet" href="css/calendar.golden-hillsides.css">
@@ -1181,8 +1181,8 @@
                 <option value="giant-petrel">Giant Petrel</option>
                 <option value="global-impact">Global Impact</option>
                 <option value="glorious-day">Glorious Day</option>
+                <option value="gold-coast">Gold Coast</option>
                 <option value="golden-century">Golden Century</option>
-                <option value="golden-coast">Golden Coast</option>
                 <option value="golden-eagle">Golden Eagle</option>
                 <option value="golden-gate">Golden Gate</option>
                 <option value="golden-hillsides">Golden Hillsides</option>
