--- a/index.html
+++ b/index.html
@@ -318,6 +318,7 @@
     <link rel="stylesheet" href="css/calendar.high-style.css">
     <link rel="stylesheet" href="css/calendar.high-tech-industry.css">
     <link rel="stylesheet" href="css/calendar.hometown-vibes.css">
+    <link rel="stylesheet" href="css/calendar.honolulu-hawaii.css">
     <link rel="stylesheet" href="css/calendar.honolulu-weekend.css">
     <link rel="stylesheet" href="css/calendar.hot-desert-summer.css">
     <link rel="stylesheet" href="css/calendar.hurricane-clouds.css">
@@ -1224,6 +1225,7 @@
                 <option value="high-style">High Style</option>
                 <option value="high-tech-industry">High-Tech Industry</option>
                 <option value="hometown-vibes">Hometown Vibes</option>
+                <option value="honolulu-hawaii">Honolulu Hawaii</option>
                 <option value="honolulu-weekend">Honolulu Weekend</option>
                 <option value="hot-desert-summer">Hot Desert Summer</option>
                 <option value="hurricane-clouds">Hurricane Clouds</option>
