--- a/index.html
+++ b/index.html
@@ -342,6 +342,7 @@
     <link rel="stylesheet" href="css/calendar.in-your-dreams.css">
     <link rel="stylesheet" href="css/calendar.island-beauty.css">
     <link rel="stylesheet" href="css/calendar.island-breeze.css">
+    <link rel="stylesheet" href="css/calendar.island-glow.css">
     <link rel="stylesheet" href="css/calendar.island-of-rainbows.css">
     <link rel="stylesheet" href="css/calendar.japan-emperor.css">
     <link rel="stylesheet" href="css/calendar.jungle-nature.css">
@@ -1249,6 +1250,7 @@
                 <option value="in-your-dreams">In Your Dreams</option>
                 <option value="island-beauty">Island Beauty</option>
                 <option value="island-breeze">Island Breeze</option>
+                <option value="island-glow">Island Glow</option>
                 <option value="island-of-rainbows">Island of Rainbows</option>
                 <option value="japan-emperor">Japan's Emperor</option>
                 <option value="jungle-nature">Jungle Nature</option>
