--- a/index.html
+++ b/index.html
@@ -646,6 +646,7 @@
     <link rel="stylesheet" href="css/calendar.tokyo-at-night.css">
     <link rel="stylesheet" href="css/calendar.too-beautiful-to-be-true.css">
     <link rel="stylesheet" href="css/calendar.toronto-raptors.css">
+    <link rel="stylesheet" href="css/calendar.tropical-horizon.css">
     <link rel="stylesheet" href="css/calendar.tropical-islands.css">
     <link rel="stylesheet" href="css/calendar.tropical-jungle.css">
     <link rel="stylesheet" href="css/calendar.tropical-nature.css">
@@ -1553,6 +1554,7 @@
                 <option value="tokyo-at-night">Tokyo at Night</option>
                 <option value="too-beautiful-to-be-true">Too Beautiful to be True</option>
                 <option value="toronto-raptors">Toronto Raptors</option>
+                <option value="tropical-horizon">Tropical Horizon</option>
                 <option value="tropical-islands">Tropical Islands</option>
                 <option value="tropical-jungle">Tropical Jungle</option>
                 <option value="tropical-nature">Tropical Nature</option>
