--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
     <link rel="stylesheet" href="css/calendar.coastal-gulf.css">
     <link rel="stylesheet" href="css/calendar.coastal-pacific.css">
     <link rel="stylesheet" href="css/calendar.coconut-islands.css">
+    <link rel="stylesheet" href="css/calendar.coconut-shores.css">
     <link rel="stylesheet" href="css/calendar.coffee-for-leaders.css">
     <link rel="stylesheet" href="css/calendar.collaboration-idea.css">
     <link rel="stylesheet" href="css/calendar.colombian-jungle.css">
@@ -172,6 +173,7 @@
     <link rel="stylesheet" href="css/calendar.cool-atlantic-waves.css">
     <link rel="stylesheet" href="css/calendar.coral-garden.css">
     <link rel="stylesheet" href="css/calendar.coral-reef.css">
+    <link rel="stylesheet" href="css/calendar.coral-sunset.css">
     <link rel="stylesheet" href="css/calendar.cosmic-nebula.css">
     <link rel="stylesheet" href="css/calendar.cosmic-perspective.css">
     <link rel="stylesheet" href="css/calendar.cracked-ice.css">
@@ -1071,6 +1073,7 @@
                 <option value="coastal-gulf">Coastal Gulf</option>
                 <option value="coastal-pacific">Coastal Pacific</option>
                 <option value="coconut-islands">Coconut Islands</option>
+                <option value="coconut-shores">Coconut Shores</option>
                 <option value="coffee-for-leaders">Coffee for Leaders</option>
                 <option value="collaboration-idea">Collaboration Idea</option>
                 <option value="colombian-jungle">Colombian Jungle</option>
@@ -1082,6 +1085,7 @@
                 <option value="cool-atlantic-waves">Cool Atlantic Waves</option>
                 <option value="coral-garden">Coral Garden</option>
                 <option value="coral-reef">Coral Reef</option>
+                <option value="coral-sunset">Coral Sunset</option>
                 <option value="cosmic-nebula">Cosmic Nebula</option>
                 <option value="cosmic-perspective">Cosmic Perspective</option>
                 <option value="cracked-ice">Cracked Ice</option>
