--- a/index.html
+++ b/index.html
@@ -238,6 +238,7 @@
     <link rel="stylesheet" href="css/calendar.emerald-stream.css">
     <link rel="stylesheet" href="css/calendar.emerald-water.css">
     <link rel="stylesheet" href="css/calendar.emperor-penguin.css">
+    <link rel="stylesheet" href="css/calendar.endless-horizon.css">
     <link rel="stylesheet" href="css/calendar.endless-summer.css">
     <link rel="stylesheet" href="css/calendar.enjoy-the-journey.css">
     <link rel="stylesheet" href="css/calendar.essential-oils.css">
@@ -1151,6 +1152,7 @@
                 <option value="emerald-stream">Emerald Stream</option>
                 <option value="emerald-water">Emerald Water</option>
                 <option value="emperor-penguin">Emperor Penguin</option>
+                <option value="endless-horizon">Endless Horizon</option>
                 <option value="endless-summer">Endless Summer</option>
                 <option value="enjoy-the-journey">Enjoy the Journey</option>
                 <option value="essential-oils">Essential Oils</option>
