--- a/index.html
+++ b/index.html
@@ -220,6 +220,7 @@
     <link rel="stylesheet" href="css/calendar.doterra-natural.css">
     <link rel="stylesheet" href="css/calendar.doterra-new.css">
     <link rel="stylesheet" href="css/calendar.doterra-power.css">
+    <link rel="stylesheet" href="css/calendar.double-rainbow.css">
     <link rel="stylesheet" href="css/calendar.dragonfire.css">
     <link rel="stylesheet" href="css/calendar.dragon-flame.css">
     <link rel="stylesheet" href="css/calendar.dragonfly.css">
@@ -1134,6 +1135,7 @@
                 <option value="doterra-natural">DōTERRA Natural</option>
                 <option value="doterra-new">DōTERRA New</option>
                 <option value="doterra-power">DōTERRA Power</option>
+                <option value="double-rainbow">Double Rainbow</option>
                 <option value="dragonfire">Dragonfire</option>
                 <option value="dragon-flame">Dragon Flame</option>
                 <option value="dragonfly">Dragonfly</option>
