--- a/index.html
+++ b/index.html
@@ -477,6 +477,7 @@
     <link rel="stylesheet" href="css/calendar.palma-de-mallorca.css">
     <link rel="stylesheet" href="css/calendar.palm-beach.css">
     <link rel="stylesheet" href="css/calendar.palm-beach-aruba.css">
+    <link rel="stylesheet" href="css/calendar.palm-tree.css">
     <link rel="stylesheet" href="css/calendar.patagonian-shores.css">
     <link rel="stylesheet" href="css/calendar.patagonian-sky.css">
     <link rel="stylesheet" href="css/calendar.perfect-afternoon.css">
@@ -1391,6 +1392,7 @@
                 <option value="palma-de-mallorca">Palma de Mallorca</option>
                 <option value="palm-beach">Palm Beach</option>
                 <option value="palm-beach-aruba">Palm Beach Aruba</option>
+                <option value="palm-tree">Palm Tree</option>
                 <option value="patagonian-shores">Patagonian Shores</option>
                 <option value="patagonian-sky">Patagonian Sky</option>
                 <option value="perfect-afternoon">Perfect Afternoon</option>
