--- a/index.html
+++ b/index.html
@@ -592,6 +592,7 @@
     <link rel="stylesheet" href="css/calendar.summer-breeze.css">
     <link rel="stylesheet" href="css/calendar.summer-sky.css">
     <link rel="stylesheet" href="css/calendar.summer-vibes.css">
+    <link rel="stylesheet" href="css/calendar.sunflower-fields.css">
     <link rel="stylesheet" href="css/calendar.sunny-beach.css">
     <link rel="stylesheet" href="css/calendar.sunrise-over-the-ocean.css">
     <link rel="stylesheet" href="css/calendar.sunset-magic.css">
@@ -1507,6 +1508,7 @@
                 <option value="summer-breeze">Summer Breeze</option>
                 <option value="summer-sky">Summer Sky</option>
                 <option value="summer-vibes">Summer Vibes</option>
+                <option value="sunflower-fields">Sunflower Fields</option>
                 <option value="sunny-beach">Sunny Beach</option>
                 <option value="sunrise-over-the-ocean">Sunrise over the Ocean</option>
                 <option value="sunset-magic">Sunset Magic</option>
