--- a/index.html
+++ b/index.html
@@ -440,6 +440,7 @@
     <link rel="stylesheet" href="css/calendar.niagara-falls.css">
     <link rel="stylesheet" href="css/calendar.night-dragon.css">
     <link rel="stylesheet" href="css/calendar.night-mode-design.css">
+    <link rel="stylesheet" href="css/calendar.night-ninja.css">
     <link rel="stylesheet" href="css/calendar.night-sky.css">
     <link rel="stylesheet" href="css/calendar.no-place-like-home.css">
     <link rel="stylesheet" href="css/calendar.northern-lights.css">
@@ -1356,6 +1357,7 @@
                 <option value="niagara-falls">Niagara Falls</option>
                 <option value="night-dragon">Night Dragon</option>
                 <option value="night-mode-design">Night Mode Design</option>
+                <option value="night-ninja">Night Ninja</option>
                 <option value="night-sky">Night Sky</option>
                 <option value="no-place-like-home">No Place like Home</option>
                 <option value="northern-lights">Northern Lights</option>
