--- a/index.html
+++ b/index.html
@@ -329,6 +329,7 @@
     <link rel="stylesheet" href="css/calendar.hot-desert-summer.css">
     <link rel="stylesheet" href="css/calendar.hurricane-clouds.css">
     <link rel="stylesheet" href="css/calendar.hyperloop.css">
+    <link rel="stylesheet" href="css/calendar.iceberg-edge.css">
     <link rel="stylesheet" href="css/calendar.iceberg-lake.css">
     <link rel="stylesheet" href="css/calendar.ice-giant.css">
     <link rel="stylesheet" href="css/calendar.ice-palace.css">
@@ -1248,6 +1249,7 @@
                 <option value="hot-desert-summer">Hot Desert Summer</option>
                 <option value="hurricane-clouds">Hurricane Clouds</option>
                 <option value="hyperloop">Hyperloop</option>
+                <option value="iceberg-edge">Iceberg Edge</option>
                 <option value="iceberg-lake">Iceberg Lake</option>
                 <option value="ice-giant">Ice Giant</option>
                 <option value="ice-palace">Ice Palace</option>
