--- a/index.html
+++ b/index.html
@@ -677,6 +677,7 @@
     <link rel="stylesheet" href="css/calendar.vibrant-colors.css">
     <link rel="stylesheet" href="css/calendar.viking-helmet.css">
     <link rel="stylesheet" href="css/calendar.viktoria-falls.css">
+    <link rel="stylesheet" href="css/calendar.waikiki-beach.css">
     <link rel="stylesheet" href="css/calendar.watermelon.css">
     <link rel="stylesheet" href="css/calendar.weekend-downtime.css">
     <link rel="stylesheet" href="css/calendar.weekend-mindset.css">
@@ -1596,6 +1597,7 @@
                 <option value="vibrant-colors">Vibrant Colors</option>
                 <option value="viking-helmet">Viking Helmet</option>
                 <option value="viktoria-falls">Viktoria Falls</option>
+                <option value="waikiki-beach">Waikiki Beach</option>
                 <option value="watermelon">Watermelon</option>
                 <option value="weekend-downtime">Weekend Downtime</option>
                 <option value="weekend-mindset">Weekend Mindset</option>
