--- a/index.html
+++ b/index.html
@@ -347,6 +347,7 @@
     <link rel="stylesheet" href="css/calendar.into-the-night.css">
     <link rel="stylesheet" href="css/calendar.invincible-zone.css">
     <link rel="stylesheet" href="css/calendar.in-your-dreams.css">
+    <link rel="stylesheet" href="css/calendar.island-bay.css">
     <link rel="stylesheet" href="css/calendar.island-beauty.css">
     <link rel="stylesheet" href="css/calendar.island-breeze.css">
     <link rel="stylesheet" href="css/calendar.island-glow.css">
@@ -1268,6 +1269,7 @@
                 <option value="into-the-night">Into the Night</option>
                 <option value="invincible-zone">Invincible Zone</option>
                 <option value="in-your-dreams">In Your Dreams</option>
+                <option value="island-bay">Island Bay</option>
                 <option value="island-beauty">Island Beauty</option>
                 <option value="island-breeze">Island Breeze</option>
                 <option value="island-glow">Island Glow</option>
