--- a/index.html
+++ b/index.html
@@ -271,6 +271,7 @@
     <link rel="stylesheet" href="css/calendar.free-style.css">
     <link rel="stylesheet" href="css/calendar.fresh-start.css">
     <link rel="stylesheet" href="css/calendar.frontier-unknown.css">
+    <link rel="stylesheet" href="css/calendar.frozen-magic.css">
     <link rel="stylesheet" href="css/calendar.frozen-wilderness.css">
     <link rel="stylesheet" href="css/calendar.full-pink-moon.css">
     <link rel="stylesheet" href="css/calendar.fun-activity.css">
@@ -1193,6 +1194,7 @@
                 <option value="free-style">Free Style</option>
                 <option value="fresh-start">Fresh Start</option>
                 <option value="frontier-unknown">Frontier Unknown</option>
+                <option value="frozen-magic">Frozen Magic</option>
                 <option value="frozen-wilderness">Frozen Wilderness</option>
                 <option value="full-pink-moon">Full Pink Moon</option>
                 <option value="fun-activity">Fun Activity</option>
