--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@
     <link rel="stylesheet" href="css/calendar.crystal-snowfall.css">
     <link rel="stylesheet" href="css/calendar.crystal-stream.css">
     <link rel="stylesheet" href="css/calendar.cyber-pulse.css">
+    <link rel="stylesheet" href="css/calendar.dark-chocolate.css">
     <link rel="stylesheet" href="css/calendar.dark-code.css">
     <link rel="stylesheet" href="css/calendar.dark-mode.css">
     <link rel="stylesheet" href="css/calendar.darkness-blue.css">
@@ -1109,6 +1110,7 @@
                 <option value="crystal-snowfall">Crystal Snowfall</option>
                 <option value="crystal-stream">Crystal Stream</option>
                 <option value="cyber-pulse">Cyber Pulse</option>
+                <option value="dark-chocolate">Dark Chocolate</option>
                 <option value="dark-code">Dark Code</option>
                 <option value="dark-mode">Dark Mode</option>
                 <option value="darkness-blue">Darkness Blue</option>
