--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
     <link rel="stylesheet" href="css/calendar.best-of-technology.css">
     <link rel="stylesheet" href="css/calendar.best-practice.css">
     <link rel="stylesheet" href="css/calendar.best-response.css">
+    <link rel="stylesheet" href="css/calendar.beyond-the-ordinary.css">
     <link rel="stylesheet" href="css/calendar.be-yourself.css">
     <link rel="stylesheet" href="css/calendar.bigboss-style.css">
     <link rel="stylesheet" href="css/calendar.big-crown.css">
@@ -1003,6 +1004,7 @@
                 <option value="best-of-technology">Best of Technology</option>
                 <option value="best-practice">Best Practice</option>
                 <option value="best-response">Best Response</option>
+                <option value="beyond-the-ordinary">Beyond the Ordinary</option>
                 <option value="be-yourself">Be Yourself</option>
                 <option value="bigboss-style">Bigboss Style</option>
                 <option value="big-crown">Big Crown</option>
