--- a/index.html
+++ b/index.html
@@ -364,6 +364,7 @@
     <link rel="stylesheet" href="css/calendar.kilimanjaro-outskirts.css">
     <link rel="stylesheet" href="css/calendar.lady-blue.css">
     <link rel="stylesheet" href="css/calendar.lake-mcdonald.css">
+    <link rel="stylesheet" href="css/calendar.land-of-tomorrow.css">
     <link rel="stylesheet" href="css/calendar.last-chance.css">
     <link rel="stylesheet" href="css/calendar.lavender-bliss.css">
     <link rel="stylesheet" href="css/calendar.lemongrass-sky.css">
@@ -1290,6 +1291,7 @@
                 <option value="kilimanjaro-outskirts">Kilimanjaro Outskirts</option>
                 <option value="lady-blue">Lady Blue</option>
                 <option value="lake-mcdonald">Lake McDonald</option>
+                <option value="land-of-tomorrow">Land of Tomorrow</option>
                 <option value="last-chance">Last Chance</option>
                 <option value="lavender-bliss">Lavender Bliss</option>
                 <option value="lemongrass-sky">Lemongrass Sky</option>
