--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
     <link rel="stylesheet" href="css/calendar.blue-mountains.css">
     <link rel="stylesheet" href="css/calendar.blue-ocean.css">
     <link rel="stylesheet" href="css/calendar.blue-planet.css">
+    <link rel="stylesheet" href="css/calendar.blue-rocky-roads.css">
     <link rel="stylesheet" href="css/calendar.blue-sky.css">
     <link rel="stylesheet" href="css/calendar.blue-stars.css">
     <link rel="stylesheet" href="css/calendar.blue-system.css">
@@ -1044,6 +1045,7 @@
                 <option value="blue-mountains">Blue Mountains</option>
                 <option value="blue-ocean">Blue Ocean</option>
                 <option value="blue-planet">Blue Planet</option>
+                <option value="blue-rocky-roads">Blue Rocky Roads</option>
                 <option value="blue-sky">Blue Sky</option>
                 <option value="blue-stars">Blue Stars</option>
                 <option value="blue-system">Blue System</option>
