--- a/index.html
+++ b/index.html
@@ -359,6 +359,7 @@
     <link rel="stylesheet" href="css/calendar.japan-emperor.css">
     <link rel="stylesheet" href="css/calendar.jungle-nature.css">
     <link rel="stylesheet" href="css/calendar.just-around-the-bend.css">
+    <link rel="stylesheet" href="css/calendar.keep-cool.css">
     <link rel="stylesheet" href="css/calendar.keep-it-simple.css">
     <link rel="stylesheet" href="css/calendar.keep-on-smiling.css">
     <link rel="stylesheet" href="css/calendar.keep-shining.css">
@@ -1287,6 +1288,7 @@
                 <option value="japan-emperor">Japan's Emperor</option>
                 <option value="jungle-nature">Jungle Nature</option>
                 <option value="just-around-the-bend">Just around the Bend</option>
+                <option value="keep-cool">Keep Cool</option>
                 <option value="keep-it-simple">Keep it Simple</option>
                 <option value="keep-on-smiling">Keep on Smiling</option>
                 <option value="keep-shining">Keep Shining</option>
