--- a/index.html
+++ b/index.html
@@ -536,11 +536,12 @@
     <link rel="stylesheet" href="css/calendar.royal-caribbean.css">
     <link rel="stylesheet" href="css/calendar.royal-crown.css">
     <link rel="stylesheet" href="css/calendar.sacramento-kings.css">
-    <link rel="stylesheet" href="css/calendar.samurai-path.css">
     <link rel="stylesheet" href="css/calendar.saint-tropez-moon.css">
+    <link rel="stylesheet" href="css/calendar.samurai-path.css">
     <link rel="stylesheet" href="css/calendar.san-francisco-lights.css">
     <link rel="stylesheet" href="css/calendar.san-francisco-sunrise.css">
     <link rel="stylesheet" href="css/calendar.santa-barbara.css">
+    <link rel="stylesheet" href="css/calendar.santa-monica.css">
     <link rel="stylesheet" href="css/calendar.science-fiction.css">
     <link rel="stylesheet" href="css/calendar.sea-breeze.css">
     <link rel="stylesheet" href="css/calendar.seabreeze-avenue.css">
@@ -1464,11 +1465,12 @@
                 <option value="royal-caribbean">Royal Caribbean</option>
                 <option value="royal-crown">Royal Crown</option>
                 <option value="sacramento-kings">Sacramento Kings</option>
-                <option value="samurai-path">Samurai Path</option>
                 <option value="saint-tropez-moon">Saint Tropez Moon</option>
+                <option value="samurai-path">Samurai Path</option>
                 <option value="san-francisco-lights">San Francisco Lights</option>
                 <option value="san-francisco-sunrise">San Francisco Sunrise</option>
                 <option value="santa-barbara">Santa Barbara CA</option>
+                <option value="santa-monica">Santa Monica CA</option>
                 <option value="science-fiction">Science Fiction</option>
                 <option value="sea-breeze">Sea Breeze</option>
                 <option value="seabreeze-avenue">Seabreeze Avenue</option>
