--- a/index.html
+++ b/index.html
@@ -607,6 +607,7 @@
     <link rel="stylesheet" href="css/calendar.sunflower-fields.css">
     <link rel="stylesheet" href="css/calendar.sunny-beach.css">
     <link rel="stylesheet" href="css/calendar.sunrise-over-the-ocean.css">
+    <link rel="stylesheet" href="css/calendar.sunset-beach.css">
     <link rel="stylesheet" href="css/calendar.sunset-magic.css">
     <link rel="stylesheet" href="css/calendar.sunset-point.css">
     <link rel="stylesheet" href="css/calendar.supreme-level.css">
@@ -1536,6 +1537,7 @@
                 <option value="sunflower-fields">Sunflower Fields</option>
                 <option value="sunny-beach">Sunny Beach</option>
                 <option value="sunrise-over-the-ocean">Sunrise over the Ocean</option>
+                <option value="sunset-beach">Sunset Beach</option>
                 <option value="sunset-magic">Sunset Magic</option>
                 <option value="sunset-point">Sunset Point</option>
                 <option value="supreme-level">Supreme Level</option>
