--- a/index.html
+++ b/index.html
@@ -693,6 +693,7 @@
     <link rel="stylesheet" href="css/calendar.weekend-mindset.css">
     <link rel="stylesheet" href="css/calendar.we-fly-higher.css">
     <link rel="stylesheet" href="css/calendar.west-hollywood.css">
+    <link rel="stylesheet" href="css/calendar.whale-shark.css">
     <link rel="stylesheet" href="css/calendar.when-style-speaks-first.css">
     <link rel="stylesheet" href="css/calendar.white-cherry-tree.css">
     <link rel="stylesheet" href="css/calendar.white-shark.css">
@@ -1623,6 +1624,7 @@
                 <option value="weekend-mindset">Weekend Mindset</option>
                 <option value="we-fly-higher">We Fly Higher</option>
                 <option value="west-hollywood">West Hollywood</option>
+                <option value="whale-shark">Whale Shark</option>
                 <option value="when-style-speaks-first">When Style Speaks First</option>
                 <option value="white-cherry-tree">White Cherry Tree</option>
                 <option value="white-shark">White Shark</option>
