--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
     <link rel="stylesheet" href="css/calendar.black-style.css">
     <link rel="stylesheet" href="css/calendar.black-velvet.css">
     <link rel="stylesheet" href="css/calendar.black-violet.css">
+    <link rel="stylesheet" href="css/calendar.blue-angels.css">
     <link rel="stylesheet" href="css/calendar.blue-banana.css">
     <link rel="stylesheet" href="css/calendar.blue-bird.css">
     <link rel="stylesheet" href="css/calendar.blue-bliss.css">
@@ -1035,6 +1036,7 @@
                 <option value="black-style">Black Style</option>
                 <option value="black-velvet">Black Velvet</option>
                 <option value="black-violet">Black Violet</option>
+                <option value="blue-angels">Blue Angels</option>
                 <option value="blue-banana">Blue Banana</option>
                 <option value="blue-bird">Blue Bird</option>
                 <option value="blue-bliss">Blue Bliss</option>
