--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
     <link rel="stylesheet" href="css/calendar.black-style.css">
     <link rel="stylesheet" href="css/calendar.black-velvet.css">
     <link rel="stylesheet" href="css/calendar.black-violet.css">
+    <link rel="stylesheet" href="css/calendar.blue-and-violet.css">
     <link rel="stylesheet" href="css/calendar.blue-angels.css">
     <link rel="stylesheet" href="css/calendar.blue-banana.css">
     <link rel="stylesheet" href="css/calendar.blue-bird.css">
@@ -1055,6 +1056,7 @@
                 <option value="blue-sky">Blue Sky</option>
                 <option value="blue-stars">Blue Stars</option>
                 <option value="blue-system">Blue System</option>
+                <option value="blue-and-violet">Blue & Violet</option>
                 <option value="blue-whale">Blue Whale</option>
                 <option value="blue-white">Blue & White</option>
                 <option value="blue-window">Blue Window</option>
