--- a/index.html
+++ b/index.html
@@ -411,6 +411,7 @@
     <link rel="stylesheet" href="css/calendar.middle-of-nowhere.css">
     <link rel="stylesheet" href="css/calendar.midnight-alchemy.css">
     <link rel="stylesheet" href="css/calendar.midnight-black.css">
+    <link rel="stylesheet" href="css/calendar.midnight-jungle.css">
     <link rel="stylesheet" href="css/calendar.midnight-sun.css">
     <link rel="stylesheet" href="css/calendar.midnight-train.css">
     <link rel="stylesheet" href="css/calendar.midnight-elegance.css">
@@ -1345,6 +1346,7 @@
                 <option value="middle-of-nowhere">Middle of Nowhere</option>
                 <option value="midnight-alchemy">Midnight Alchemy</option>
                 <option value="midnight-black">Midnight Black</option>
+                <option value="midnight-jungle">Midnight Jungle</option>
                 <option value="midnight-sun">Midnight Sun</option>
                 <option value="midnight-train">Midnight Train</option>
                 <option value="midnight-elegance">Midnight Elegance</option>
