--- a/index.html
+++ b/index.html
@@ -353,6 +353,7 @@
     <link rel="stylesheet" href="css/calendar.into-the-night.css">
     <link rel="stylesheet" href="css/calendar.invincible-zone.css">
     <link rel="stylesheet" href="css/calendar.in-your-dreams.css">
+    <link rel="stylesheet" href="css/calendar.iron-silence.css">
     <link rel="stylesheet" href="css/calendar.island-bay.css">
     <link rel="stylesheet" href="css/calendar.island-beauty.css">
     <link rel="stylesheet" href="css/calendar.island-breeze.css">
@@ -1288,6 +1289,7 @@
                 <option value="into-the-night">Into the Night</option>
                 <option value="invincible-zone">Invincible Zone</option>
                 <option value="in-your-dreams">In Your Dreams</option>
+                <option value="iron-silence">Iron Silence</option>
                 <option value="island-bay">Island Bay</option>
                 <option value="island-beauty">Island Beauty</option>
                 <option value="island-breeze">Island Breeze</option>
