--- a/index.html
+++ b/index.html
@@ -564,6 +564,7 @@
     <link rel="stylesheet" href="css/calendar.shaping-the-future.css">
     <link rel="stylesheet" href="css/calendar.shift-in-perception.css">
     <link rel="stylesheet" href="css/calendar.significant-improvement.css">
+    <link rel="stylesheet" href="css/calendar.silent-code.css">
     <link rel="stylesheet" href="css/calendar.silicon-valley.css">
     <link rel="stylesheet" href="css/calendar.silver-dragon.css">
     <link rel="stylesheet" href="css/calendar.sky-diving.css">
@@ -1499,6 +1500,7 @@
                 <option value="shaping-the-future">Shaping the Future</option>
                 <option value="shift-in-perception">Shift in Perception</option>
                 <option value="significant-improvement">Significant Improvement</option>
+                <option value="silent-code">Silent Code</option>
                 <option value="silicon-valley">Silicon Valley</option>
                 <option value="silver-dragon">Silver Dragon</option>
                 <option value="sky-diving">Sky Diving</option>
