--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
     <link rel="stylesheet" href="css/calendar.city-of-angels.css">
     <link rel="stylesheet" href="css/calendar.city-of-dreams.css">
     <link rel="stylesheet" href="css/calendar.city-of-night.css">
+    <link rel="stylesheet" href="css/calendar.city-skyline.css">
     <link rel="stylesheet" href="css/calendar.clean-code.css">
     <link rel="stylesheet" href="css/calendar.clean-energy.css">
     <link rel="stylesheet" href="css/calendar.coastal-atlantic.css">
@@ -1095,6 +1096,7 @@
                 <option value="city-of-angels">City of Angels</option>
                 <option value="city-of-dreams">City of Dreams</option>
                 <option value="city-of-night">City of Night</option>
+                <option value="city-skyline">City Skyline</option>
                 <option value="clean-code">Clean Code</option>
                 <option value="clean-energy">Clean Energy</option>
                 <option value="coastal-atlantic">Coastal Atlantic</option>
