--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
     <link rel="stylesheet" href="css/calendar.black-panther.css">
     <link rel="stylesheet" href="css/calendar.black-pear.css">
     <link rel="stylesheet" href="css/calendar.black-pearl.css">
+    <link rel="stylesheet" href="css/calendar.black-silver.css">
     <link rel="stylesheet" href="css/calendar.black-style.css">
     <link rel="stylesheet" href="css/calendar.black-velvet.css">
     <link rel="stylesheet" href="css/calendar.black-violet.css">
@@ -1038,6 +1039,7 @@
                 <option value="black-panther">Black Panther</option>
                 <option value="black-pear">Black Pear</option>
                 <option value="black-pearl">Black Pearl</option>
+                <option value="black-silver">Black Silver</option>
                 <option value="black-style">Black Style</option>
                 <option value="black-velvet">Black Velvet</option>
                 <option value="black-violet">Black Violet</option>
