--- a/index.html
+++ b/index.html
@@ -190,6 +190,7 @@
     <link rel="stylesheet" href="css/calendar.crossroads-stone.css">
     <link rel="stylesheet" href="css/calendar.crystal-snowfall.css">
     <link rel="stylesheet" href="css/calendar.crystal-stream.css">
+    <link rel="stylesheet" href="css/calendar.cultural-escape.css">
     <link rel="stylesheet" href="css/calendar.cyber-pulse.css">
     <link rel="stylesheet" href="css/calendar.dark-chocolate.css">
     <link rel="stylesheet" href="css/calendar.dark-code.css">
@@ -1129,6 +1130,7 @@
                 <option value="crossroads-stone">Crossroads Stone</option>
                 <option value="crystal-snowfall">Crystal Snowfall</option>
                 <option value="crystal-stream">Crystal Stream</option>
+                <option value="cultural-escape">Cultural Escape</option>
                 <option value="cyber-pulse">Cyber Pulse</option>
                 <option value="dark-chocolate">Dark Chocolate</option>
                 <option value="dark-code">Dark Code</option>
