--- a/index.html
+++ b/index.html
@@ -257,6 +257,7 @@
     <link rel="stylesheet" href="css/calendar.excellent-performance.css">
     <link rel="stylesheet" href="css/calendar.exceptional-quality.css">
     <link rel="stylesheet" href="css/calendar.executive-management.css">
+    <link rel="stylesheet" href="css/calendar.exotic-escape.css">
     <link rel="stylesheet" href="css/calendar.exotic-island.css">
     <link rel="stylesheet" href="css/calendar.expedient-path.css">
     <link rel="stylesheet" href="css/calendar.expedition-north.css">
@@ -1197,6 +1198,7 @@
                 <option value="excellent-performance">Excellent Performance</option>
                 <option value="exceptional-quality">Exceptional Quality</option>
                 <option value="executive-management">Executive Management</option>
+                <option value="exotic-escape">Exotic Escape</option>
                 <option value="exotic-island">Exotic Island</option>
                 <option value="expedient-path">Expedient Path</option>
                 <option value="expedition-north">Expedition North</option>
