--- a/index.html
+++ b/index.html
@@ -633,6 +633,7 @@
     <link rel="stylesheet" href="css/calendar.technological-innovation.css">
     <link rel="stylesheet" href="css/calendar.technological-might.css">
     <link rel="stylesheet" href="css/calendar.the-art-of-visible.css">
+    <link rel="stylesheet" href="css/calendar.the-best-escape.css">
     <link rel="stylesheet" href="css/calendar.the-best-kind-of-view.css">
     <link rel="stylesheet" href="css/calendar.the-best-mood.css">
     <link rel="stylesheet" href="css/calendar.the-best-of-fashion.css">
@@ -1573,6 +1574,7 @@
                 <option value="technological-innovation">Technological Innovation</option>
                 <option value="technological-might">Technological Might</option>
                 <option value="the-art-of-visible">The Art of Visible</option>
+                <option value="the-best-escape">The Best Escape</option>
                 <option value="the-best-kind-of-view">The Best Kind of View</option>
                 <option value="the-best-mood">The Best Mood</option>
                 <option value="the-best-of-fashion">The Best of Fashion</option>
