--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
     <link rel="stylesheet" href="css/calendar.city-of-dreams.css">
     <link rel="stylesheet" href="css/calendar.city-of-night.css">
     <link rel="stylesheet" href="css/calendar.city-skyline.css">
+    <link rel="stylesheet" href="css/calendar.classic-escape.css">
     <link rel="stylesheet" href="css/calendar.clean-code.css">
     <link rel="stylesheet" href="css/calendar.clean-energy.css">
     <link rel="stylesheet" href="css/calendar.coastal-atlantic.css">
@@ -1102,6 +1103,7 @@
                 <option value="city-of-dreams">City of Dreams</option>
                 <option value="city-of-night">City of Night</option>
                 <option value="city-skyline">City Skyline</option>
+                <option value="classic-escape">Classic Escape</option>
                 <option value="clean-code">Clean Code</option>
                 <option value="clean-energy">Clean Energy</option>
                 <option value="coastal-atlantic">Coastal Atlantic</option>
