--- a/index.html
+++ b/index.html
@@ -296,6 +296,7 @@
     <link rel="stylesheet" href="css/calendar.golden-century.css">
     <link rel="stylesheet" href="css/calendar.golden-eagle.css">
     <link rel="stylesheet" href="css/calendar.golden-gate.css">
+    <link rel="stylesheet" href="css/calendar.golden-gate-bridge.css">
     <link rel="stylesheet" href="css/calendar.golden-hillsides.css">
     <link rel="stylesheet" href="css/calendar.golden-horizon.css">
     <link rel="stylesheet" href="css/calendar.golden-langur.css">
@@ -664,6 +665,7 @@
     <link rel="stylesheet" href="css/calendar.the-perfect-blend.css">
     <link rel="stylesheet" href="css/calendar.the-prince-of-monaco.css">
     <link rel="stylesheet" href="css/calendar.the-real-luxury.css">
+    <link rel="stylesheet" href="css/calendar.the-red-city.css">
     <link rel="stylesheet" href="css/calendar.the-silver-sword.css">
     <link rel="stylesheet" href="css/calendar.the-spirit-of-innovation.css">
     <link rel="stylesheet" href="css/calendar.the-unstoppable-mindset.css">
@@ -1239,6 +1241,7 @@
                 <option value="golden-century">Golden Century</option>
                 <option value="golden-eagle">Golden Eagle</option>
                 <option value="golden-gate">Golden Gate</option>
+                <option value="golden-gate-bridge">Golden Gate Bridge</option>
                 <option value="golden-hillsides">Golden Hillsides</option>
                 <option value="golden-horizon">Golden Horizon</option>
                 <option value="golden-langur">Golden Langur</option>
@@ -1605,6 +1608,7 @@
                 <option value="the-perfect-blend">The Perfect Blend</option>
                 <option value="the-prince-of-monaco">The Prince of Monaco</option>
                 <option value="the-real-luxury">The Real Luxury</option>
+                <option value="the-red-city">The Red City</option>
                 <option value="samurai-path">The Samurai's Path</option>
                 <option value="the-silver-sword">The Silver Sword</option>
                 <option value="the-spirit-of-innovation">The Spirit of Innovation</option>
