--- a/index.html
+++ b/index.html
@@ -518,6 +518,7 @@
     <link rel="stylesheet" href="css/calendar.practical-experience.css">
     <link rel="stylesheet" href="css/calendar.practice-makes-perfect.css">
     <link rel="stylesheet" href="css/calendar.precious-question.css">
+    <link rel="stylesheet" href="css/calendar.premium-quality.css">
     <link rel="stylesheet" href="css/calendar.pristine-lake.css">
     <link rel="stylesheet" href="css/calendar.progressive-decision.css">
     <link rel="stylesheet" href="css/calendar.pure-light.css">
@@ -1463,6 +1464,7 @@
                 <option value="practical-experience">Practical Experience</option>
                 <option value="practice-makes-perfect">Practice Makes Perfect</option>
                 <option value="precious-question">Precious Question</option>
+                <option value="premium-quality">Premium Quality</option>
                 <option value="pristine-lake">Pristine Lake</option>
                 <option value="progressive-decision">Progressive Decision</option>
                 <option value="pure-light">Pure Light</option>
