--- a/index.html
+++ b/index.html
@@ -308,6 +308,7 @@
     <link rel="stylesheet" href="css/calendar.gold-mine.css">
     <link rel="stylesheet" href="css/calendar.gradual-improvement.css">
     <link rel="stylesheet" href="css/calendar.grand-prix.css">
+    <link rel="stylesheet" href="css/calendar.great-britain.css">
     <link rel="stylesheet" href="css/calendar.great-idea.css">
     <link rel="stylesheet" href="css/calendar.great-lakes.css">
     <link rel="stylesheet" href="css/calendar.greece-is-bliss.css">
@@ -1255,6 +1256,7 @@
                 <option value="gold-mine">Gold Mine</option>
                 <option value="gradual-improvement">Gradual Improvement</option>
                 <option value="grand-prix">Grand Prix</option>
+                <option value="great-britain">Great Britain</option>
                 <option value="great-idea">Great Idea</option>
                 <option value="great-lakes">Great Lakes</option>
                 <option value="greece-is-bliss">Greece is Bliss</option>
