--- a/index.html
+++ b/index.html
@@ -456,6 +456,7 @@
     <link rel="stylesheet" href="css/calendar.new-mission.css">
     <link rel="stylesheet" href="css/calendar.new-strategy.css">
     <link rel="stylesheet" href="css/calendar.new-style.css">
+    <link rel="stylesheet" href="css/calendar.new-wings.css">
     <link rel="stylesheet" href="css/calendar.next-level.css">
     <link rel="stylesheet" href="css/calendar.next-steps.css">
     <link rel="stylesheet" href="css/calendar.niagara-falls.css">
@@ -1404,6 +1405,7 @@
                 <option value="new-mission">New Mission</option>
                 <option value="new-strategy">New Strategy</option>
                 <option value="new-style">New Style</option>
+                <option value="new-wings">New Wings</option>
                 <option value="next-level">Next Level</option>
                 <option value="next-steps">Next Steps</option>
                 <option value="niagara-falls">Niagara Falls</option>
