--- a/index.html
+++ b/index.html
@@ -541,6 +541,7 @@
     <link rel="stylesheet" href="css/calendar.real-results.css">
     <link rel="stylesheet" href="css/calendar.red-desert.css">
     <link rel="stylesheet" href="css/calendar.red-lake.css">
+    <link rel="stylesheet" href="css/calendar.red-morning-light.css">
     <link rel="stylesheet" href="css/calendar.red-squirrel.css">
     <link rel="stylesheet" href="css/calendar.remarkable-city.css">
     <link rel="stylesheet" href="css/calendar.remote-island.css">
@@ -1490,6 +1491,7 @@
                 <option value="real-results">Real Results</option>
                 <option value="red-desert">Red Desert</option>
                 <option value="red-lake">Red Lake</option>
+                <option value="red-morning-light">Red Morning Light</option>
                 <option value="red-squirrel">Red Squirrel</option>
                 <option value="remarkable-city">Remarkable City</option>
                 <option value="remote-island">Remote Island</option>
