--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
     <link rel="stylesheet" href="css/calendar.bamboo-flute.css">
     <link rel="stylesheet" href="css/calendar.battle-of-the-ice.css">
     <link rel="stylesheet" href="css/calendar.bermuda-triangle.css">
+    <link rel="stylesheet" href="css/calendar.best-kept-secret.css">
     <link rel="stylesheet" href="css/calendar.best-of-technology.css">
     <link rel="stylesheet" href="css/calendar.best-practice.css">
     <link rel="stylesheet" href="css/calendar.best-response.css">
@@ -1027,6 +1028,7 @@
                 <option value="bamboo-flute">Bamboo Flute</option>
                 <option value="battle-of-the-ice">Battle of the Ice</option>
                 <option value="bermuda-triangle">Bermuda Triangle</option>
+                <option value="best-kept-secret">Best Kept Secret</option>
                 <option value="best-of-technology">Best of Technology</option>
                 <option value="best-practice">Best Practice</option>
                 <option value="best-response">Best Response</option>
