--- a/index.html
+++ b/index.html
@@ -377,6 +377,7 @@
     <link rel="stylesheet" href="css/calendar.keep-shining.css">
     <link rel="stylesheet" href="css/calendar.kilimanjaro-outskirts.css">
     <link rel="stylesheet" href="css/calendar.lady-blue.css">
+    <link rel="stylesheet" href="css/calendar.land-of-dreams.css">
     <link rel="stylesheet" href="css/calendar.lake-mcdonald.css">
     <link rel="stylesheet" href="css/calendar.land-of-tomorrow.css">
     <link rel="stylesheet" href="css/calendar.last-chance.css">
@@ -1330,6 +1331,7 @@
                 <option value="kilimanjaro-outskirts">Kilimanjaro Outskirts</option>
                 <option value="lady-blue">Lady Blue</option>
                 <option value="lake-mcdonald">Lake McDonald</option>
+                <option value="land-of-dreams">Land of Dreams</option>
                 <option value="land-of-tomorrow">Land of Tomorrow</option>
                 <option value="last-chance">Last Chance</option>
                 <option value="lavender-bliss">Lavender Bliss</option>
